<resources>
    <string name="app_name">Unlucky Party</string>
    <string name="list_icon_tag">Ver lista</string>

    <string name="minigames">MINIJUEGOS</string>
    <string name="events">EVENTOS</string>
    <string name="penalties">CASTIGOS</string>

    <string name="selector_list">Lista</string>
    <string name="selector_random">Aleatorio</string>

    <string name="swap">Cambiar</string>
    <string name="drop">Eliminar</string>

    <string name="placeholder">Placeholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_random_fragment">Hello random fragment</string>
    <string name="hello_list_fragment">Hello list fragment</string>
</resources>